fix visibility issues on bright monitors

--- a/static/css/sass/_mixins.scss
+++ b/static/css/sass/_mixins.scss
@@ -26,11 +26,11 @@
 }
 
 .shadow-low {
-	box-shadow: 0 7px 11px -5px rgba(black,0.3);
+	box-shadow: 0 7px 11px -5px rgba(black,0.4);
 }
 
 .shadow-high {
-	box-shadow:0px 10px 55px -5px rgba(0,0,0,.3);
+	box-shadow:0px 10px 55px -5px rgba(0,0,0,.4);
 }
 
 @-webkit-keyframes slide {
